tests/e2e/not_allowed/await.error
Error: syntax error in story at line 1, column 1

1|    await = 1
      ^^^^^

E0030: `await` is reserved for future use
